Improve individual blog page layout
Issue #581

--- a/src/app/components/share/share.html
+++ b/src/app/components/share/share.html
@@ -1,22 +1,22 @@
 <template args="model">
-    <div class="buttons">
+    <div class="buttons {model.minimal ? 'minimal' : ''}">
         <div class="fb-share-button" data-href="https://developers.facebook.com/docs/plugins/"
          data-layout="link" data-mobile-iframe="true">
             <a class="fb-xfbml-parse-ignore facebook btn" target="_blank"
               href="https://www.facebook.com/sharer/sharer.php?u={model.pageUrl}&src=share_button&sdk=joey&display=popup&app_id=">
-                  <i class="social-icon fab fa-facebook"></i>
-                  Facebook
+                  <i class="social-icon fab fa-facebook-f"></i>
+                  <span if="!model.minimal">Facebook</span>
               </a>
         </div>
         <a href="https://twitter.com/intent/tweet?text={model.message}&url={model.pageUrl}"
          class="twitter twitter-share-button btn">
             <i class="social-icon fab fa-twitter"></i>
-            Twitter
+            <span if="!model.minimal">Twitter</span>
         </a>
         <a class="linkedin btn"
          href="https://www.linkedin.com/shareArticle?url={model.pageUrl}&mini=true&source=OpenStax&title={model.message}">
-            <i class="social-icon fab fa-linkedin"></i>
-            LinkedIn
+            <i class="social-icon fab fa-linkedin-in"></i>
+            <span if="!model.minimal">LinkedIn</span>
         </a>
     </div>
 </template>
