--- a/src/app/pages/blog/article/article.html
+++ b/src/app/pages/blog/article/article.html
@@ -1,11 +1,11 @@
 <template args="model">
-    <if condition="model">
-        <div class="hero" style="{backgroundImage: `url(${model.image})`}"
-            role="img" aria-label="{model.imageAlt}"
-        >
-            <img class="strips" src="/images/components/strips.svg" height="10" alt="" role="presentation">
+    <div class="text-content">
+        <div class="floater">
+            <div class="sticky-bit" skip="true">
+            </div>
         </div>
-        <div class="text-content">
+        <if condition="model">
+            <img src="{model.image}" alt="model.imageAlt">
             <h1>{model.title}</h1>
             <h2 if="model.subheading">{model.subheading}</h2>
             <div class="byline" skip="true"></div>
@@ -13,6 +13,6 @@
             <div class="tags" if="model.tags.length">
                 <div class="tag" each="tag in model.tags">{tag}</div>
             </div>
-        </div>
-    </if>
+        </if>
+    </div>
 </template>
