--- a/src/app/pages/blog/article/article.scss
+++ b/src/app/pages/blog/article/article.scss
@@ -5,32 +5,69 @@
     max-width: 100vw;
     width: 100%;
 
-    .hero {
-        background-position: 33% 20%;
-        background-repeat: no-repeat;
-        background-size: cover;
-        height: 60rem;
-        overflow: hidden;
-        padding: 0;
-        position: relative;
-        width: 100vw;
-
-        @include width-up-to($phone-max) {
-            height: 40rem;
-        }
-
-        @include wider-than($media-content-max) {
-            height: calc(4rem + 40vw);
-            max-height: 80vh;
-        }
-    }
-
     .text-content {
         @extend %text-content;
 
+        $floater-width: 9rem;
+        $floater-margin: 8rem;
+
         align-items: flex-start;
-        width: 100%;
+        max-width: 72rem; // Non-standard, but...
         padding: 0 $normal-margin;
+        position: relative;
+
+        @include width-up-to($phone-max) {
+            width: 100%;
+
+            .floater {
+                background-color: ui-color(white);
+                border-bottom: thin solid ui-color(form-border);
+                padding: 1rem 0;
+                position: sticky;
+                top: 5rem;
+                width: 100%;
+            }
+
+            .sticky-bit,
+            .buttons {
+                align-items: center;
+                display: grid;
+                grid-auto-flow: column;
+                justify-content: left;
+            }
+        }
+
+        @include wider-than($phone-max) {
+            margin-top: 4rem;
+
+            .floater {
+                height: 100%;
+                position: absolute;
+                left: -#{$floater-width + $floater-margin};
+            }
+
+            .sticky-bit {
+                position: sticky;
+                top: 7rem;
+                width: $floater-width;
+            }
+        }
+
+        @include width-between($phone-max, $tablet-max) {
+            margin-right: 0;
+            width: calc(100% - #{$floater-width + $floater-margin + $normal-margin});
+
+            // .floater {
+            //     left: -#{$floater-width + $floater-margin / 2};
+            // }
+        }
+
+        @include wider-than($tablet-max) {
+            width: calc(100% - #{2 * ($floater-width + $floater-margin + $normal-margin)});
+
+            .floater {
+            }
+        }
     }
 
     .body {
