Handle partner filter categories
Issue #669
Rating and cost tags are hidden since we have no data
Sort selector is hidden because there is no spec for how it should work

--- a/src/app/pages/partner-marketplace/partner-marketplace.html
+++ b/src/app/pages/partner-marketplace/partner-marketplace.html
@@ -2,7 +2,7 @@
     <section class="banner hero">
         <div class="boxed">
             <h1>{model.headline}</h1>
-            <div>{model.description}</div>
+            <div data-html="description" skip="true"></div>
             <section class="controls" skip="true"></section>
         </div>
         <img class="strips" src="/images/components/strips.svg" height="10" alt="" role="presentation">
