--- a/src/app/pages/partner-marketplace/results/results.html
+++ b/src/app/pages/partner-marketplace/results/results.html
@@ -1,7 +1,9 @@
 <template args="model">
     <div class="boxed {model.displayMode}">
         <a each="entry in model.entries" class="card" href="{`?${encodeURIComponent(entry.title)}`}">
-            <img class="logo" src="{entry.logoUrl}" alt="">
+            <div class="logo">
+                <img if="entry.logoUrl" src="{entry.logoUrl}" alt="">
+            </div>
             <div class="resource-title">{entry.title}</div>
             <div class="resource-description" data-html="entries[{$item}].description" skip="true"></div>
             <div class="rating-box">
