Track partner marketplace filter usage in Google Analytics
Issue #671

--- a/src/app/pages/partner-marketplace/partner-details/partner-details.scss
+++ b/src/app/pages/partner-marketplace/partner-details/partner-details.scss
@@ -28,7 +28,9 @@
             grid-area: title;
         }
         .blurb {
+            display: grid;
             grid-area: blurb;
+            grid-template-columns: auto auto;
         }
         .titles {
             grid-area: subjects;
