--- a/src/app/pages/partner-marketplace/partner-details/partner-details.html
+++ b/src/app/pages/partner-marketplace/partner-details/partner-details.html
@@ -2,7 +2,12 @@
     <section class="synopsis">
         <img class="icon" src="{model.icon}" alt="">
         <div class="headline">{model.headline}</div>
-        <div data-html="blurb"></div>
+        <div class="blurb">
+            <div data-html="blurb"></div>
+            <a class="partner-website" href="{model.partnerUrl}">
+                Read more <i class="fas fa-external-link-alt"></i>
+            </a>
+        </div>
         <div class="titles">
             <span class="title" each="title in model.titles">{title}</span>
         </div>
