--- a/src/app/pages/partner-marketplace/results/results.html
+++ b/src/app/pages/partner-marketplace/results/results.html
@@ -1,15 +1,3 @@
 <template args="model">
-    <div class="boxed {model.displayMode}">
-        <a each="entry in model.entries" class="card" href="{`?${encodeURIComponent(entry.title)}`}">
-            <div class="logo">
-                <img if="entry.logoUrl" src="{entry.logoUrl}" alt="">
-            </div>
-            <div class="resource-title">{entry.title}</div>
-            <div class="resource-description" data-html="entries[{$item}].description" skip="true"></div>
-            <div class="rating-box">
-                <span>cost: $3</span>
-                <span>rating: <i class="fas fa-star"></i>5</span>
-            </div>
-        </a>
-    </div>
+    <div class="boxed {model.displayMode}" skip="true"></div>
 </template>
