Put feature flag on partners list on instructor resources tab
Issue #670

--- a/src/app/pages/details/instructor-resource-tab/instructor-resource-tab.html
+++ b/src/app/pages/details/instructor-resource-tab/instructor-resource-tab.html
@@ -4,7 +4,7 @@
             <h2 data-html="freeStuff.heading" skip="true"></h2>
             <div data-html="freeStuff.blurb" class="blurb-body" skip="true"></div>
         </div>
-        <div class="cards">
+        <div class="cards {model.includePartners}">
             <div class="resources">
                 <div class="resource-box double">
                     <div class="top-line">
