Implement updated partner page with lightbox and book partners on book details page
Cleanup and refactoring
Update data values used
Fix details page partner list
Fix history state bug that breaks partner-marketplace
Partner lightbox
Layout issues
Use CMS data
Include videos in carousel

--- a/src/app/pages/partner-marketplace/partner-details/carousel/carousel.html
+++ b/src/app/pages/partner-marketplace/partner-details/carousel/carousel.html
@@ -1,13 +1,18 @@
 <template args="model">
-    <div class="image-row">
+    <div class="image-row" style="grid-template-columns: repeat({model.frameCount}, 1fr); width: {model.frameCount}00%">
         <div each="image in model.images" class="image-holder">
             <img src="{image}">
+        </div>
+        <div each="video in model.videos" class="image-holder">
+            <video controls>
+                <source src="{video}" type="video/mp4">
+            </video>
         </div>
     </div>
     <button if="model.frameNumber > 0" type="button" class="navigate previous">
         <i class="fa fa-chevron-left"></i>
     </button>
-    <button if="model.frameNumber < model.images.length - 1" type="button" class="navigate next">
+    <button if="model.frameNumber < model.frameCount - 1" type="button" class="navigate next">
         <i class="fa fa-chevron-right"></i>
     </button>
 </template>
