--- a/src/app/pages/details/instructor-resource-tab/partners/partners.scss
+++ b/src/app/pages/details/instructor-resource-tab/partners/partners.scss
@@ -39,10 +39,12 @@
         color: inherit;
         display: grid;
         grid-column-gap: $normal-margin;
+        grid-row-gap: 0.5rem;
         grid-template: 'logo title'
         'logo description'
-        'logo info' / 9rem auto;
-        padding: $normal-margin;
+        'logo info' / 10rem auto;
+        height: 13rem;
+        padding: 1rem $normal-margin;
         position: relative;
         text-decoration: none;
 
@@ -70,6 +72,10 @@
 
         .description {
             grid-area: description;
+            display: -webkit-box;
+            -webkit-line-clamp: 2;
+            -webkit-box-orient: vertical;
+            overflow: hidden;
 
             > p:first-child {
                 margin: 0;
@@ -81,9 +87,11 @@
             grid-area: info;
             grid-auto-flow: column;
             grid-column-gap: 0.5rem;
+            height: 2.5rem;
             justify-self: left;
             max-width: 100%;
             overflow: hidden;
+            white-space: nowrap;
         }
 
         .info {
@@ -92,7 +100,7 @@
             background-color: ui-color(default);
             border-radius: 0.3rem;
             display: flex;
-            padding: 0.7rem $normal-margin;
+            padding: 0.5rem $normal-margin;
             text-transform: uppercase;
 
             .label {
