--- a/src/app/pages/partner-marketplace/partner-details/partner-details.html
+++ b/src/app/pages/partner-marketplace/partner-details/partner-details.html
@@ -3,16 +3,16 @@
         <img class="icon" src="{model.icon}" alt="">
         <div class="headline">{model.headline}</div>
         <div class="blurb">
-            <div data-html="blurb"></div>
             <a class="partner-website" href="{model.partnerUrl}">
                 Read more <i class="fas fa-external-link-alt"></i>
             </a>
+            <div>{model.blurb}</div>
         </div>
         <div class="titles">
             <span class="title" each="title in model.titles">{title}</span>
         </div>
         <div class="tags">
-            <span class="tag" each="tag in model.tags">{tag}</span>
+            <span each="entry in model.tags" class="tag">{entry.label}: {entry.value}</span>
         </div>
     </section>
     <div class="scrolling-region">
