--- a/src/app/pages/partner-marketplace/partner-details/partner-details.scss
+++ b/src/app/pages/partner-marketplace/partner-details/partner-details.scss
@@ -13,14 +13,31 @@
         background-color: ui-color(white);
         display: grid;
         grid-column-gap: 3rem;
-        grid-template: 'icon title'
-        'icon blurb'
-        'icon subjects'
-        'icon tags' / auto 1fr;
+        padding-right: 4rem;
+
+        @include width-up-to($phone-max) {
+            grid-row-gap: 1rem;
+            grid-template: 'icon'
+            'title'
+            'blurb'
+            'subjects'
+            'tags' / 100%;
+        }
+
+        @include wider-than($phone-max) {
+            grid-row-gap: 0.5rem;
+            grid-template: 'icon title'
+            'icon blurb'
+            'icon subjects'
+            'icon tags' / auto 1fr;
+        }
 
         .icon {
+            align-self: center;
             grid-area: icon;
+            justify-self: center;
             max-height: 12rem;
+            max-width: 12rem;
         }
         .headline {
             @include title-font(1.6rem);
@@ -28,18 +45,22 @@
             grid-area: title;
         }
         .blurb {
-            display: grid;
             grid-area: blurb;
-            grid-template-columns: auto auto;
+
+            .partner-website {
+                float: right;
+            }
         }
         .titles {
+            @include body-font(1rem);
+
+            color: os-color(gray);
             grid-area: subjects;
+            line-height: 1;
+            margin-bottom: 0.5rem;
+            text-transform: uppercase;
 
             .title {
-                @include body-font(1rem);
-
-                color: os-color(gray);
-                text-transform: uppercase;
 
                 + .title::before {
                     content: ' • ';
@@ -47,19 +68,24 @@
             }
         }
         .tags {
+            display: grid;
             grid-area: tags;
+            grid-gap: 0.5rem;
+            margin-bottom: -0.5rem;
+
+            @include wider-than($phone-max) {
+                grid-auto-flow: column;
+                justify-content: start;
+            }
 
             .tag {
                 @include body-font(1.2rem);
 
                 background-color: ui-color(default);
+                border-radius: 0.3rem;
                 font-weight: bold;
                 padding: 0.2rem 0.4rem;
                 text-transform: uppercase;
-
-                + .tag {
-                    margin-left: 1rem;
-                }
             }
         }
     }
