--- a/src/app/pages/partner-marketplace/results/result/result.html
+++ b/src/app/pages/partner-marketplace/results/result/result.html
@@ -3,9 +3,8 @@
         <img if="model.logoUrl" src="{model.logoUrl}" alt="">
     </div>
     <div class="resource-title">{model.title}</div>
-    <div class="resource-description" data-html="description" skip="true"></div>
-    <div class="rating-box">
-        <span>cost: $3</span>
-        <span>rating: <i class="fas fa-star"></i>5</span>
+    <div class="resource-description">{model.description}</div>
+    <div class="tags">
+        <span each="entry in model.tags">{entry.label}: {entry.value}</span>
     </div>
 </template>
