Adjust spacing on top of creator fest page contents

--- a/src/app/pages/creator-fest/creator-fest.scss
+++ b/src/app/pages/creator-fest/creator-fest.scss
@@ -84,6 +84,7 @@
     #page-content {
         min-height: 14rem;
         @include wider-than($phone-max) {
+            padding-top: 9rem;
             padding-bottom: 4rem;
         }
     }
