--- a/src/app/pages/creator-fest/shared.scss
+++ b/src/app/pages/creator-fest/shared.scss
@@ -22,7 +22,8 @@ $text-highlight: #f7cce4;
     -webkit-text-fill-color: transparent;
     -webkit-text-stroke-color: $cf-pink;
     -webkit-text-stroke-width: 0.3rem;
-    line-height: 1.3;
+    line-height: 0.9;
+    padding-top: 4rem;
 }
 
 %blue-line {
