--- a/src/app/pages/details/instructor-resource-tab/partners/partners.html
+++ b/src/app/pages/details/instructor-resource-tab/partners/partners.html
@@ -1,14 +1,23 @@
 <template args="model">
-    <div class="title-bar">{model.title}</div>
-    <div class="blurbs">
-        <a each="blurb in model.blurbs" class="blurb" href="{blurb.url}">
-            <img src="{blurb.image}" alt="">
-            <div class="name">{blurb.name}</div>
-            <div class="description" data-html="blurbs[{$item}].description"></div>
-            <div class="info">
-                <span class="label">Cost:</span>{blurb.cost}
-                <span class="label">Rating:</span><i class="fas fa-star"></i>{blurb.rating}
-            </div>
-        </a>
+    <div class="title-bar">
+        {model.title}
+        <a class="filter-for-book" href="/partner-marketplace">See more</a>
+    </div>
+    <div class="blurb-scroller">
+        <div class="blurbs">
+            <a each="blurb in model.blurbs" class="blurb" href="{blurb.url}">
+                <img src="{blurb.image}" alt="">
+                <div class="name">{blurb.name}</div>
+                <div class="description" data-html="blurbs[{$item}].description"></div>
+                <div class="tags">
+                    <div if="blurb.cost" class="info">
+                        <span class="label">Cost:</span>{blurb.cost}
+                    </div>
+                    <div if="blurb.type" class="info">
+                        <span class="label">Type:</span>{blurb.type}
+                    </div>
+                </div>
+            </a>
+        </div>
     </div>
 </template>
