--- a/src/app/pages/partner-marketplace/results/results.scss
+++ b/src/app/pages/partner-marketplace/results/results.scss
@@ -20,10 +20,6 @@
                 height: 12.8rem;
                 padding: $normal-margin 3rem;
                 text-decoration: none;
-
-                .logo {
-                    max-width: 9rem;
-                }
             }
         }
 
@@ -42,7 +38,6 @@
 
                 .logo {
                     justify-self: center;
-                    max-width: 14rem;
                 }
 
                 .resource-title {
@@ -65,6 +60,11 @@
             display: grid;
             grid-area: image;
             justify-content: center;
+
+            > img {
+                max-height: 8rem;
+                max-width: 100%;
+            }
         }
 
         .resource-title {
