Hide partners in non-testing environments

--- a/src/app/pages/details/instructor-resource-tab/instructor-resource-tab.scss
+++ b/src/app/pages/details/instructor-resource-tab/instructor-resource-tab.scss
@@ -27,6 +27,10 @@ $icon-size: 6rem;
         display: grid;
         grid-column-gap: 3rem;
 
+        &:not(.include-partners) .partners {
+            display: none;
+        }
+
         &.include-partners {
             grid-template-columns: 2fr 1fr;
 
