--- a/src/app/pages/details/instructor-resource-tab/instructor-resource-tab.scss
+++ b/src/app/pages/details/instructor-resource-tab/instructor-resource-tab.scss
@@ -27,18 +27,16 @@ $icon-size: 6rem;
         display: grid;
         grid-column-gap: 3rem;
 
+        &:not(.include-partners) .partners {
+            display: none;
+        }
+
         &.include-partners {
             grid-template-columns: 2fr 1fr;
-
-            .partners {
-                @extend %card;
-
-                max-height: calc(100vh - 8rem);
-                overflow: hidden;
-            }
         }
 
         .resources {
+            grid-auto-rows: min-content;
             margin-top: 0;
         }
     }
