--- a/src/app/pages/bookstore-suppliers/bookstore-suppliers.html
+++ b/src/app/pages/bookstore-suppliers/bookstore-suppliers.html
@@ -9,44 +9,52 @@
         </div>
         <div class="images">
             <img class="desktop-bg" src="/images/bookstore-suppliers/hero-bookstore-print-desktop.png">
-            <div class="clipped">
-                <img class="phone-bg" srcset="
-                    /images/bookstore-suppliers/Hero-isometric-book-bg-mobile.png 1x,
-                    /images/bookstore-suppliers/Hero-isometric-book-bg-mobile@2x.png 2x
-                " alt="four books">
-            </div>
-            <img class="phone-fg" srcset="
-                /images/bookstore-suppliers/Hero-books-mobile.png 1x,
-                /images/bookstore-suppliers/Hero-books-mobile@2x.png 2x
-            " alt="two books">
         </div>
     </div>
     <div if="model.suppliers" class="main-content">
-        <div class="button-row">
-            <a href="{model.usButtonUrl}" class="btn primary">{model.usButtonText}</a>
-            <a href="{model.caButtonUrl}" class="btn primary">{model.caButtonText}</a>
+        <div class="text-section">
+            <h2>Providers</h2>
+            <div class="intro-blurb">{model.featuredSuppliersBlurb}</div>
         </div>
-        <div class="smaller-screen" data-html="subhead2" skip="true"></div>
-        <div class="intro-blurb">{model.featuredSuppliersBlurb}</div>
-        <div class="featured cards {model.cardsClass}">
-            <div each="supplier in model.featuredSuppliers" class="card">
-                <div class="logo-dot">
-                    <img src="{supplier.logoUrl}" alt="company logo">
-                </div>
-                <h2>{supplier.name}</h2>
-                <div class="blurb" data-html="featuredSuppliers[{$item}].description" skip="true"></div>
-                <a class="btn" href="{supplier.buttonUrl}">{supplier.buttonText}</a>
+        <div each="supplier in model.featuredSupplier" class="card featured">
+            <div class="logo-dot">
+                <img src="{supplier.logoUrl}" alt="company logo">
             </div>
+            <h2>{supplier.name}</h2>
+            <div class="blurb" data-html="featuredSupplier[{$item}].description" skip="true"></div>
+            <a class="btn primary" href="{supplier.buttonUrl}">{supplier.buttonText}</a>
         </div>
         <div class="intro-blurb">{model.suppliersBlurb}</div>
-        <div class="cards {model.cardsClass}">
+        <div class="cards">
             <div each="supplier in model.suppliers" class="card">
+                <div if="supplier.isCanadian" class="flag-card">
+                    <div class="canada-flag">
+                        <div class="white-field">
+                            <i class="fab fa-canadian-maple-leaf"></i>
+                        </div>
+                    </div>
+                </div>
                 <div class="logo-dot">
                     <img src="{supplier.logoUrl}" alt="company logo">
                 </div>
                 <h2>{supplier.name}</h2>
                 <div class="blurb" data-html="suppliers[{$item}].description" skip="true"></div>
-                <a class="btn" href="{supplier.buttonUrl}">{supplier.buttonText}</a>
+                <a class="btn primary" href="{supplier.buttonUrl}">{supplier.buttonText}</a>
+            </div>
+        </div>
+        <h2>Price lists</h2>
+        <div class="split-card">
+            <div>
+                {model.usButtonText}
+                <a href="{model.usButtonUrl}" class="btn primary">
+                    View <i class="fas fa-external-link-alt"></i>
+                </a>
+            </div>
+            <div>
+                {model.caButtonText}
+                <a href="{model.caButtonUrl}" class="btn primary">
+                    View <i class="fas fa-external-link-alt"></i>
+                </a>
             </div>
         </div>
     </div>
