--- a/src/app/pages/creator-fest/navigator/navigator.scss
+++ b/src/app/pages/creator-fest/navigator/navigator.scss
@@ -8,6 +8,7 @@
     display: inline-grid;
     grid-auto-flow: column;
     line-height: 3rem;
+    overflow-x: auto;
     padding: 2rem 0;
     position: relative;
     top: 0;
