Update phone view

--- a/src/app/pages/details/phone-view/instructor-resources-pane/instructor-resources-pane.html
+++ b/src/app/pages/details/phone-view/instructor-resources-pane/instructor-resources-pane.html
@@ -1,16 +1,8 @@
 <template args="model">
-    <h4>Free ({model.freeResources && model.freeResources.length})</h4>
+    <a class="card filter-for-book">
+        OpenStax Partners <i class="fas fa-sign-out-alt"></i>
+    </a>
     <div class="swipe-zone">
         <div class="free-resources-region" skip="true"></div>
     </div>
-    <h4>Paid ({model.paidResources && model.paidResources.length})</h4>
-    <div class="swipe-zone">
-        <div class="paid-resources-region">
-            <div class="logo-box" each="res in model.paidResources">
-                <a href="{res.book_link_url}">
-                    <img src="{res.ally_color_logo}" alt="{res.ally_heading}">
-                </a>
-            </div>
-        </div>
-    </div
 </template>
