--- a/src/app/pages/details/instructor-resource-tab/partners/partners.scss
+++ b/src/app/pages/details/instructor-resource-tab/partners/partners.scss
@@ -6,9 +6,8 @@
 
     display: grid;
     grid-column: 2;
-    grid-template-rows: auto 1fr;
-    max-height: 100%;
-    overflow: hidden;
+    grid-template-rows: min-content min-content;
+    height: min-content;
 
     .title-bar {
         @include set-font(h4);
@@ -28,8 +27,7 @@
     }
 
     .blurbs {
-        height: 0;
-        overflow-y: visible;
+        max-height: calc(100vh - 16rem);
     }
 
     .blurb {
@@ -41,10 +39,9 @@
         grid-column-gap: $normal-margin;
         grid-row-gap: 0.5rem;
         grid-template: 'logo title'
-        'logo description'
-        'logo info' / 10rem auto;
-        height: 13rem;
-        padding: 1rem $normal-margin;
+        'logo info' / 10rem 1fr;
+        min-height: 13rem;
+        padding: 1.2rem 1rem 1.2rem 1.2rem;
         position: relative;
         text-decoration: none;
 
@@ -65,33 +62,23 @@
         }
 
         .name {
-            @include set-font(h4);
+            @include title-font(1.6rem);
 
             grid-area: title;
         }
 
-        .description {
-            grid-area: description;
-            display: -webkit-box;
-            -webkit-line-clamp: 2;
-            -webkit-box-orient: vertical;
-            overflow: hidden;
-
-            > p:first-child {
-                margin: 0;
-            }
-        }
-
         .tags {
-            display: grid;
+            display: flex;
+            flex-wrap: wrap;
             grid-area: info;
-            grid-auto-flow: column;
-            grid-column-gap: 0.5rem;
-            height: 2.5rem;
-            justify-self: left;
-            max-width: 100%;
-            overflow: hidden;
-            white-space: nowrap;
+            margin-bottom: -1rem;
+            margin-right: -0.5rem;
+            min-height: 2.5rem;
+
+            .info {
+                margin-bottom: 1rem;
+                margin-right: 0.5rem;
+            }
         }
 
         .info {
