--- a/src/app/pages/partner-marketplace/active-filters/active-filters.html
+++ b/src/app/pages/partner-marketplace/active-filters/active-filters.html
@@ -1,2 +1,7 @@
-<div class="filters" skip="true"></div>
-<a href="clear">Clear All</a>
+<template args="model">
+    <div class="result-count">{model.resultCount} matching partners</div>
+    <div>
+        <div class="filters" skip="true"></div>
+        <a href="clear">Clear All</a>
+    </div>
+</template>
