--- a/src/app/pages/partner-marketplace/controls/checkboxes-linked-to-store/checkboxes-linked-to-store.html
+++ b/src/app/pages/partner-marketplace/controls/checkboxes-linked-to-store/checkboxes-linked-to-store.html
@@ -1,9 +1,7 @@
 <template args="model">
     <label each="option in model.options" class="form-control">
-        <span class="indicator">
-            <input class="hidden" type="checkbox" value="{option.value}"
-                checked="{model.isSelected(option.value)}"
-            >
+        <span class="{`indicator ${model.checkedClass(option.value)}`}">
+            <input class="hidden" type="checkbox" value="{option.value}">
             <i class="tick fa fa-check"></i>
         </span>
         <span class="label-text">{option.label}</span>
